<resources>
    <string name="app_name">Account Saver</string>

    <!--Navigation Drawer-->
    <string name="nav_account">Account</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Open navigation drawer</string>

    <!--Login-->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="username_empty_error">Username cannot be empty</string>
    <string name="password_empty_error">Password cannot be empty</string>
    <string name="logging_in">Logging In</string>

    <!--Sign Up-->
    <string name="name_hint">Name</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="name_empty_error">Username cannot be empty</string>
    <string name="confirm_password_empty_error">Password cannot be empty</string>
    <string name="different_password_error">Password are not the same</string>
    <string name="signing_up">Signing Up</string>
    <string name="sign_up_success_message">Signed Up Successfully</string>

    <!--Account-->
    <string name="search">Search</string>
    <string name="search_hint">Search accounts</string>

    <!--Account Details-->
    <string name="new_account_title">New Account</string>
    <string name="updated">Updated: </string>
    <string name="main_information">Main Information</string>
    <string name="game_name">Game Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sub_information">Sub Information</string>
    <string name="password_2">Password 2</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="security_questions">Security Questions</string>
    <plurals name="questions">
        <item quantity="zero">%1$d Question</item>
        <item quantity="one">%1$d Question</item>
        <item quantity="other">%1$d Questions</item>
    </plurals>
    <string name="game_name_empty_error">Game name cannot be empty</string>
    <string name="loading">Loading</string>
    <string name="edit_dismiss_message">Data is not saved. Continue to dismiss editing?</string>

    <!--Lock Dialog-->
    <string name="dialog_lock_add_title">Add Lock</string>
    <string name="dialog_lock_unlock_title">Unlock</string>
    <string name="dialog_lock_message">Enter lock password</string>
    <string name="password_diff_message">Password and confirm password are not the same</string>
    <string name="incorrect_lock_password">Wrong lock password</string>

    <!--Game Icon-->
    <string name="game_icon_title">Game Icons</string>
    <string name="done">Done</string>
    <string name="uploading">Uploading</string>

    <!--Security Question-->
    <string name="dialog_security_question_message">Enter security question and answer</string>
    <string name="question_hint">Question</string>
    <string name="answer_hint">Answer</string>
    <string name="question_empty_error">Question cannot be empty</string>

    <!--Dialog-->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <!--Profile-->
    <string name="profile_welcome">Welcome</string>
    <string name="profile_logout">Logout</string>
    <string name="logging_out">Logging Out</string>
</resources>
