<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.p4.accountsaver.ui.login.SignUpViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/et_bg"
            android:paddingTop="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@android:color/transparent"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:hint="@string/username_hint"
                android:text="@={viewmodel.username}"
                app:error="@{viewmodel.usernameError}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/et_bg"
            android:paddingTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/input_layout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@android:color/transparent"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:hint="@string/name_hint"
                android:text="@={viewmodel.name}"
                app:error="@{viewmodel.nameError}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/et_bg"
            android:paddingTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/input_layout2">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:hint="@string/password_hint"
                android:text="@={viewmodel.password}"
                app:error="@{viewmodel.passwordError}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/et_bg"
            android:paddingTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/input_layout3">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"
                android:hint="@string/confirm_password_hint"
                android:text="@={viewmodel.confirmPassword}"
                app:error="@{viewmodel.confirmPasswordError}" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/sign_up_button"
            android:background="@drawable/btn_bg"
            android:textColor="@android:color/white"
            android:onClick="@{() -> viewmodel.signUp()}"
            app:layout_constraintTop_toBottomOf="@id/input_layout4"/>

    </android.support.constraint.ConstraintLayout>

</layout>